--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,33 @@ replay_pid*
 
 # Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
 .kotlin/
+
+# 构建工具产物
+.gradle/
+build/
+app/build/
+gradlew.bat
+gradlew
+gradle-wrapper.jar
+
+# IDE 配置文件
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Android 本地配置
+local.properties
+*.apk
+*.ap_
+*.aab
+*.log
+
+# 系统临时文件
+.DS_Store
+Thumbs.db
+
+# 测试/编译冗余
+*.class
+*.jar
+*.war
