实现评论功能（还在调试中）

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ swiperefreshlayout = "1.1.0"
 glide = "4.12.0"
 viewpager2 = "1.1.0"
 media3Datasource = "1.8.0"
+lifecycleCommonJvm = "2.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,7 +37,8 @@ androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "s
 glide-core = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }  # Glide核心库
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 androidx-viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2" }
-androidx-media3-datasource = { group = "androidx.media3", name = "media3-datasource", version.ref = "media3Datasource" }  # Glide注解处理器
+androidx-media3-datasource = { group = "androidx.media3", name = "media3-datasource", version.ref = "media3Datasource" }
+androidx-lifecycle-common-jvm = { group = "androidx.lifecycle", name = "lifecycle-common-jvm", version.ref = "lifecycleCommonJvm" }  # Glide注解处理器
 
 
 [plugins]
